continuaçao da listagem de carros disponiveis
