# src/shared/infra/http/routes/authenticate.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from "express";
-import { AuthenticateUserController } from "@modules/accounts/useCases/authenticateUser/AuthenticateUserController";
 
+import { AuthenticateUserController } from "@modules/accounts/useCases/authenticateUser/AuthenticateUserController";
 
 const authenticateRoutes = Router();
 
-const authenticateUserController = new AuthenticateUserController();
+const authenticateUserConstoller = new AuthenticateUserController();
 
-authenticateRoutes.post("/sessions", authenticateUserController.handle);
+authenticateRoutes.post("/sessions", authenticateUserConstoller.handle);
 
 export { authenticateRoutes };
