# src/shared/infra/http/routes/specifications.routes.ts
@@ -1,18 +1,17 @@
 import { Router } from "express";
-import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
-import { CreateSpecificationController } from "@modules/cars/useCases/createSpecification/CreateSpecificationController";
-import { ensureAdmin } from "../middlewares/ensureAdmin";
 
+import { CreateSpecificationController } from "@modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ensureAdmin } from "@shared/infra/http/middlewares/ensureAdmin";
+import { ensureAuthenticated } from "@shared/infra/http/middlewares/ensureAuthenticated";
 
 const specificationsRoutes = Router();
 
 const createSpecificationController = new CreateSpecificationController();
 
-
 specificationsRoutes.post(
-  "/", 
-  ensureAuthenticated, 
-  ensureAdmin, 
+  "/",
+  ensureAuthenticated,
+  ensureAdmin,
   createSpecificationController.handle
 );
 
