# src/swagger.json
@@ -1,11 +1,11 @@
 {
-  "openapi":"3.0.0",
-  "info":{
-    "title": "Rentalx Documentation",
+  "openapi": "3.0.0",
+  "info": {
+    "title": "RentX Documentation",
     "description": "This is an API Rent",
     "version": "1.0.0",
-    "contact":{
-      "email":"vitoria.rocha1206@gmail.com"
+    "contact": {
+      "email": "vitoria.rocha1206@gmail.com"
     }
   },
   "paths": {
@@ -14,9 +14,6 @@
         "tags": ["Category"],
         "summary": "Create a category",
         "description": "Create a new category",
-        "security": [
-          { "bearerAuth": [] }
-        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -27,203 +24,102 @@
                     "type": "string"
                   },
                   "description": {
-                    "type":"string"
+                    "type": "string"
                   }
                 },
                 "example": {
-                  "name": "Category Name Sample",
-                  "description":"Category description Sample"
+                  "name": "category name sample",
+                  "description": "category description sample"
                 }
               }
             }
           }
         },
-        "responses":{
-          "201":{
+        "responses": {
+          "201": {
             "description": "Created"
           },
-          "500":{
-            "description": "Category Alreaddy Exists"
+          "500": {
+            "description": "Category already exists"
           }
         }
       },
-      "get":{
+      "get": {
         "tags": ["Category"],
-        "summary":"List All Categories",
-        "description": "List All Categories",
+        "summary": "List all categories",
+        "description": "List all categories",
         "responses": {
           "200": {
-            "description": "Success",
+            "description": "Sucess",
             "content": {
-              "application/json":{
-                "schema":{
-                  "type": "object"
-                },
-                "description": {
-                  "type":"string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/categories/import":{
-      "post":{
-        "tags":["Category"],
-        "summary":"Upload new category",
-        "description":"Upload new category",
-        "security": [
-          { "bearerAuth": [] }
-        ],
-        "requestBody":{
-          "content":{
-            "multipart/form-data": {
-              "schema":{
-                "type":"object",
-                "properties":{
-                  "file":{
-                    "type": "string",
-                    "format":"binary"
-                  }
-                }   
-              }
-            }
-          }
-        },
-        "responses":{
-          "201":{
-            "description":"Created"
-          }
-        }
-      }
-    },
-    "/specifications": {
-      "post": {
-        "tags":["Specifications"],
-        "summary": "Create a specification",
-        "description": "Create a new specification",
-        "security": [
-          { "bearerAuth": [] }
-        ],
-        "requestBody":{
-          "content":{
-            "application/json": {
-              "schema":{
-                "$ref": "#/definitions/Specification"
-              }
-            }
-          }
-        },
-        "responses":{
-          "201":{
-            "description":"Created"
-          },
-          "500":{
-            "description": "Specification already exists!"
-          }
-        }
-      }
-    },
-    "/sessions": {
-      "post": {
-        "tags": ["Session"],
-        "summary": "Authentication User",
-        "description": "Authentication User",
-        "requestBody":{
-          "content":{
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "type": "string"
-                  },
-                  "password": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "400": {
-            "description": "Email or password incorrect!"
-          }
-        }
-      }
-    },
-    "/cars":{
-      "post": {
-        "tags": ["Cars"],
-        "summary": "Create a car",
-        "description": "Create a car",
-        "security": [
-          { "bearerAuth": [] }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json":{
-              "schema": {
-                "$ref": "#/definitions/Car"
-              }
-            }
-          }
-        },
-        "responses":{
-          "201":{
-            "description": "Created"
-          },
-          "400":{
-            "description": "Car Already exists!"
-          }
-        }
-      }
-    },
-    "/cars/images/{id}":{
-      "post":{
-        "tags": ["Cars"],
-        "summary": "Upload Car Images",
-        "description": "Upload Car Images",
-        "security": [
-          { "bearerAuth": [] }
-        ],
-        "parameters":[
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Car ID",
-            "required": true,
-            "schema":{
-              "type":"string"
-            }
-          }
-        ],
-        "requestBody":{
-          "content":{
-            "multipart/form-data":{
-              "schema":{
-                "type":"object",
-                "properties":{
-                  "images": {
-                    "type": "array",
-                    "items": {
-                      "type": "string",
-                      "format": "binary"
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "name": {
+                        "type": "string"
+                      },
+                      "description": {
+                        "type": "string"
+                      }
                     }
                   }
                 }
               }
             }
           }
+        }
+      }
+    },
+    "/categories/import": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Upload a new category",
+        "description": "Upload a new category",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
         },
-        "responses":{
+        "responses": {
           "201": {
             "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a specification",
+        "description": "Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Specification already exists!"
           }
         }
       }
@@ -231,49 +127,14 @@
   },
   "definitions": {
     "Specification": {
-      "type":"object",
-      "properties": {
-        "name":{
-          "type":"string"
-        },
-        "description": {
-          "type":"string"
-        }
-      }
-    },
-    "Car": {
       "type": "object",
       "properties": {
         "name": {
           "type": "string"
         },
-        "description":{
-          "type": "string"
-        },
-        "daily_rate": {
-          "type": "number"
-        },
-        "license_plate": {
-          "type": "string"
-        },
-        "fine_amount": {
-          "type": "number"
-        },
-        "brand": {
-          "type": "string"
-        },
-        "category_id": {
+        "description": {
           "type": "string"
         }
-      }
-    }
-  },
-  "components":{
-    "securitySchemes": {
-      "bearerAuth":{
-        "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
       }
     }
   }
